--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -26,6 +26,8 @@
 \newacronym{id}{ID}{Identification Number}
 \newacronym{pcb}{PCB}{Printed Circuit Board}
 \newacronym{os}{OS}{Operating System}
+\newacronym{uuid}{UUID}{Universally Unique Identifier}
+
 
 
 
