--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -146,6 +146,20 @@ year = {01.01.2024},
 url = {https://openscad.org},
 }
 
+@misc{HalbachMRIDesigner,
+author = {Benjamin Menküc, Lukas Winter, Thomas O'Reilly},
+title = {HalbachMRIDesigner - Create a Halbach MRI Magnet from parametric definitions},
+year = {01.01.2024},
+url = {https://github.com/menkueclab/HalbachMRIDesigner},
+}
+
+@misc{HalbachOptimisation,
+author = {Thomas O'Reilly},
+title = {HalbachOptimisation - An implementation of a genetic algorithm to optimise the homogeneity of a Halbach array by varying the ring diameters along the length of the Halbach cylinder},
+year = {01.01.2024},
+url = {https://github.com/LUMC-LowFieldMRI/HalbachOptimisation},
+}
+
 
 @Article{         harris2020array,
 title         = {Array programming with {NumPy}},
