--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -11,6 +11,24 @@ given, followed by the research problem to be solved by this work.
 \hypertarget{low-field-mri}{%
 \subsection{Low-Field MRI}\label{low-field-mri}}
 
+Low-field magnetic resonance imaging (low-field \gls{mri}) is a
+\gls{mri} technique that operates at a lower magnetic field strength
+compared to conventional high-field \gls{mri} scanners. Typically, the
+magnetic field in low-field MRI systems between
+\passthrough{\lstinline!0.1T!} and \passthrough{\lstinline!0.3T!}
+compared to the usual \passthrough{\lstinline!1.5T!} to
+\passthrough{\lstinline!3T!} in high-field \gls{mri}
+scanners.\cite{Hori2021-pt}
+
+This technology is used in medical imaging as well as in preclinical
+research. The main advantage of low-field MRI is the improved imaging of
+soft tissues, especially when examining joints and muscles. It also
+offers more cost-effective alternatives to high-field MRI
+systems.\cite{Hori2021-pt}
+
+\hypertarget{magnet-system}{%
+\subsection{Magnet System}\label{magnet-system}}
+
 \hypertarget{shimming-procedure}{%
 \subsection{Shimming Procedure}\label{shimming-procedure}}
 
@@ -52,12 +70,15 @@ Magnets}\label{charakterisation-of-permanent-magnets}}
   contruction of hallbach ringe \cite{cmr.a.20165}
 \end{itemize}
 
+\hypertarget{state-of-the-art}{%
+\section{State of the Art}\label{state-of-the-art}}
+
 \hypertarget{aim-of-this-thesis}{%
 \section{Aim of this Thesis}\label{aim-of-this-thesis}}
 
 The present work aims to provide an efficient and comprehensive solution
-for the design of low-field MRI devices by developing and implementing a
-software and hardware framework.
+for the design of low-field \gls{mri} devices by developing and
+implementing a software and hardware framework.
 
 The scope of the software library is to lay the foundation for the
 systematic characterization of magnets based on permanent magnets. The
@@ -115,21 +136,6 @@ possible use of the developed solution by the user.
   review and assessment of the overall system. This includes the
   demonstration of the implemented capabilities of the overall system
   against the previously defined usecases.
-\end{itemize}
-
-\hypertarget{state-of-the-art}{%
-\chapter{State of the Art}\label{state-of-the-art}}
-
-\hypertarget{conceptual-design}{%
-\section{Conceptual Design}\label{conceptual-design}}
-
-\begin{itemize}
-\tightlist
-\item
-  etnwicklung eines hardware uns software framework zur einfachen
-  aquirierung von Meagnetfelddaten
-\item
-  analysetools und funktionen
 \end{itemize}
 
 \hypertarget{usecases}{%
