--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -1,4 +1,34 @@
 
+@ARTICLE{Hori2021-pt,
+title     = "Low-field magnetic resonance imaging: Its history and
+              renaissance",
+author    = "Hori, Masaaki and Hagiwara, Akifumi and Goto, Masami and Wada,
+              Akihiko and Aoki, Shigeki",
+abstract  = "ABSTRACT: Low-field magnetic resonance imaging (MRI) systems
+              have seen a renaissance recently due to improvements in
+              technology (both hardware and software). Originally, the
+              performance of low-field MRI systems was rated lower than their
+              actual clinical usefulness, and they were viewed as low-cost but
+              poorly performing systems. However, various applications similar
+              to high-field MRI systems (1.5 T and 3 T) have gradually become
+              possible, culminating with high-performance low-field MRI
+              systems and their adaptations now being proposed that have
+              unique advantages over high-field MRI systems in various
+              aspects. This review article describes the physical
+              characteristics of low-field MRI systems and presents both their
+              advantages and disadvantages for clinical use (past to present),
+              along with their cutting-edge clinical applications.",
+journal   = "Invest. Radiol.",
+publisher = "Ovid Technologies (Wolters Kluwer Health)",
+volume    =  56,
+number    =  11,
+pages     = "669--679",
+month     =  nov,
+year      =  2021,
+language  = "en"
+}
+
+
 @article{cmr.a.20165,
 author = {Soltner, H. and Blümler, P.},
 title = {Dipolar Halbach magnet stacks made from identically shaped permanent magnets for magnetic resonance},
