--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -17,7 +17,7 @@ compared to conventional high-field \gls{mri} scanners. Typically, the
 magnetic field in low-field MRI systems between
 \passthrough{\lstinline!0.1T!} and \passthrough{\lstinline!0.3T!}
 compared to the usual \passthrough{\lstinline!1.5T!} to
-\passthrough{\lstinline!3T!} in high-field \gls{mri}
+\passthrough{\lstinline!3T!} and above in high-field \gls{mri}
 scanners.\cite{Hori2021-pt}
 
 This technology is used in medical imaging as well as in preclinical
@@ -32,27 +32,19 @@ systems.\cite{Hori2021-pt}
 \hypertarget{shimming-procedure}{%
 \subsection{Shimming Procedure}\label{shimming-procedure}}
 
-Der Shimming-Prozess ist ein entscheidender Schritt bei der
-Magnetresonanztomographie (MRT), um homogene Magnetfelder für präzise
-Bildgebung zu gewährleisten. Shimming korrigiert Unregelmäßigkeiten im
-statischen Magnetfeld, die durch äußere Einflüsse oder interne
-Systemfehler entstehen können. Dieser Prozess optimiert die
-Feldhomogenität, was für hochauflösende und artefaktfreie Bilder
-entscheidend ist.
+The shimming process is a crucial step in magnetic resonance imaging
+\gls{mri} to ensure homogeneous magnetic fields for precise imaging.
+Shimming corrects irregularities in the static magnetic field that can
+be caused by external influences or internal system errors. This process
+optimizes field homogeneity, which is crucial for high-resolution and
+artifact-free images.\cite{10.3389/fphy.2021.704566}
 
-Die Quellen für den Shimming-Prozess können Hardware- und
-Software-basiert sein. Hardware-Shimming beinhaltet den Einsatz von
-Gradienten- und Radiofrequenzspulen, die gezielt platziert werden, um
-das Magnetfeld auszurichten. Software-Shimming hingegen verwendet
-Algorithmen, um die Steuerparameter des MRT-Systems anzupassen und die
-Homogenität zu verbessern.
-
-Forschungspublikationen wie ``Shimming Techniques in Magnetic Resonance
-Imaging'' (DOI: 10.1007/978-1-4939-2815-6\_3) bieten detaillierte
-Einblicke in verschiedene Shimming-Methoden und Techniken. Diese
-Fortschritte in der Shimming-Technologie tragen dazu bei, die
-diagnostische Genauigkeit und Bildqualität in der MRT erheblich zu
-verbessern.
+The sources for the shimming process can be hardware and software based.
+Hardware shimming involves the use of gradient and radio frequency coils
+that are specifically placed to align the magnetic field. Software
+shimming, on the other hand, uses algorithms to adjust the control
+parameters of the \gls{mri} system and improve
+homogeneity.\cite{10.3389/fphy.2021.704566}
 
 In this work, reference is made exclusively to the hardware shim
 process. Since this project is to be used in the future to construct a
