--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -29,6 +29,15 @@ systems.\cite{Hori2021-pt}
 \hypertarget{magnet-system}{%
 \subsection{Magnet System}\label{magnet-system}}
 
+\begin{itemize}
+\tightlist
+\item
+  hinzugügen bei lowmir werden durch die geringe feldstärkre oft
+  permanentmagnet systeme eingesetzt.
+\item
+  typische konstruktionen sind dabei hallbach arrays
+\end{itemize}
+
 \hypertarget{shimming-procedure}{%
 \subsection{Shimming Procedure}\label{shimming-procedure}}
 
@@ -55,6 +64,31 @@ low-field \gls{mri} B0 field magnet from permanent magnets.
 Magnets}\label{charakterisation-of-permanent-magnets}}
 
 \begin{itemize}
+\item
+  durch fabrikatio von permantentmagneten kann es zu abweichungen
+  kommen*
+\item
+  vorallem wenn diese \textgreater N45 klassifikation sind
+\item
+  es gibt temperaturkompensierte Magnetene welche teuer sind
+\item
+  deswegen gibt es den ansatz zur vermessung
+\item
+  \begin{enumerate}
+  \def\labelenumi{\arabic{enumi}.}
+  \tightlist
+  \item
+    per algorithmus können diese dann aussortiert werden
+  \end{enumerate}
+\item
+  \begin{enumerate}
+  \def\labelenumi{\arabic{enumi}.}
+  \setcounter{enumi}{1}
+  \tightlist
+  \item
+    oder position bzw rotation angepasst werden um irregualtritie welche
+    von anderen magneten ausgehen auszucanceln
+  \end{enumerate}
 \item
   zeigt ansätzte einfacher magnet vermesseungen
   \cite{Wickenbrock_2021}
