--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -26,7 +26,9 @@
 \newacronym{id}{ID}{Identification Number}
 \newacronym{pcb}{PCB}{Printed Circuit Board}
 \newacronym{os}{OS}{Operating System}
-\newacronym{uuid}{UUID}{Universally Unique Identifier}
+\newacronym{uuid}{UUID}{Universal Unique Identifier}
+\newacronym{nmr}{NMR}{Nuclear Magnetic Resonance}
+
 
 
 
