--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -1,3 +1,13 @@
+@article{Halbach1980DesignOP,
+title={Design of permanent multipole magnets with oriented rare earth cobalt material},
+author={Klaus. Halbach},
+journal={Nuclear Instruments and Methods},
+year={1980},
+volume={169},
+pages={1-10},
+url={https://api.semanticscholar.org/CorpusID:53486791}
+}
+
 @ARTICLE{Hori2021-pt,
 title     = "Low-field magnetic resonance imaging: Its history and
               renaissance",
@@ -55,6 +65,32 @@ issn={2296-424X},
 abtract={Low-field (B<sub>0</sub> < 0.2 T) magnetic resonance imaging (MRI) is emerging as a low cost, point-of-care alternative to provide access to diagnostic imaging technology even in resource scarce environments. MRI magnets can be constructed based on permanent neodymium-iron-boron (NdFeB) magnets in discretized arrangements, leading to substantially lower mass and costs. A challenge with these designs is, however, a good B<sub>0</sub> field homogeneity, which is needed to produce high quality images free of distortions. In this work, we describe an iterative approach to build a low-field MR magnet based on a B<sub>0</sub>-shimming methodology using genetic algorithms. The methodology is tested by constructing a small bore (inner bore diameter = 130 mm) desktop MR magnet (<15 kg) at a field strength of B<sub>0</sub> = 0.1 T and a target volume of 4 cm in diameter. The configuration consists of a base magnet and shim inserts, which can be placed iteratively without modifying the base magnet assembly and without changing the inner dimensions of the bore or the outer dimensions of the MR magnet. Applying the shims, B<sub>0</sub> field inhomogeneity could be reduced by a factor 8 from 5,448 to 682 ppm in the target central slice of the magnet. Further improvements of these results can be achieved in a second or third iteration, using more sensitive magnetic field probes (e.g., nuclear magnetic resonance based magnetic field measurements). The presented methodology is scalable to bigger magnet designs. The MR magnet can be reproduced with off-the-shelf components and a 3D printer and no special tools are needed for construction. All design files and code to reproduce the results will be made available as open source hardware.}
 }
 
+
+@article{Wickenbrock_2021,
+title={High homogeneity permanent magnet for diamond magnetometry},
+volume={322},
+ISSN={1090-7807},
+url={http://dx.doi.org/10.1016/j.jmr.2020.106867},
+DOI={10.1016/j.jmr.2020.106867},
+journal={Journal of Magnetic Resonance},
+publisher={Elsevier BV},
+author={Wickenbrock, Arne and Zheng, Huijie and Chatzidrosos, Georgios and Shaji Rebeirro, Joseph and Schneemann, Tim and Blümler, Peter},
+year={2021},
+month=jan,
+pages={106867}
+}
+
+@article{HallbachMagnetDesignPaper,
+author = {Peter Bluemler, Helmut Soltner},
+year = {2023},
+month = {05},
+pages = {2522},
+title = {Practical Concepts for Design, Construction and Application of Halbach Magnets in Magnetic Resonance},
+journal = {Applied Magnetic Resonance},
+doi = {10.1007/s00723-023-01602-2}
+}
+
+
 @Article{         harris2020array,
 title         = {Array programming with {NumPy}},
 author        = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
@@ -78,28 +114,7 @@ publisher     = {Springer Science and Business Media {LLC}},
 url           = {https://doi.org/10.1038/s41586-020-2649-2}
 }
 
-@article{Wickenbrock_2021,
-title={High homogeneity permanent magnet for diamond magnetometry},
-volume={322},
-ISSN={1090-7807},
-url={http://dx.doi.org/10.1016/j.jmr.2020.106867},
-DOI={10.1016/j.jmr.2020.106867},
-journal={Journal of Magnetic Resonance},
-publisher={Elsevier BV},
-author={Wickenbrock, Arne and Zheng, Huijie and Chatzidrosos, Georgios and Shaji Rebeirro, Joseph and Schneemann, Tim and Blümler, Peter},
-year={2021},
-month=jan, pages={106867}
-}
 
-@article{HallbachMagnetDesignPaper,
-author = {Peter Bluemler, Helmut Soltner},
-year = {2023},
-month = {05},
-pages = {2522},
-title = {Practical Concepts for Design, Construction and Application of Halbach Magnets in Magnetic Resonance},
-journal = {Applied Magnetic Resonance},
-doi = {10.1007/s00723-023-01602-2}
-}
 
 @article{ortner2020magpylib,
   title={Magpylib: A free Python package for magnetic field computation},
@@ -241,10 +256,10 @@ url = {https://docs.python.org/3/library/heapq.html},
 %  Author = {Bohner, Max and  Fischer, Richard},
 %  Title = {Fachkunde Kraftfahrzeugtechnik},
 %  Publisher = {VERLAG EUROPA-LEHRMITTEL},
-%volume  = {},
+%  volume  = {},
 %  Year = {2001},
 %  ISBN = {3808522399},
-% URL = {},
+%  URL = {},
 %}
 
 
